@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.32.0</version>
+			<version>2.35.0</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -41,21 +41,78 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.2</version>
 			<scope>test</scope>
 		</dependency>
        <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>1.1.3</version>
+            <version>1.1.2</version>
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-spring</artifactId>
-            <version>1.1.3</version>
+            <version>1.1.2</version>
         </dependency>
-		
+        <dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-html</artifactId>
+			<version>0.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
+	
+		<build>
+		<plugins>
+			<!--START:plugins -->
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.11</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<alwaysGenerateSurefireReport>false</alwaysGenerateSurefireReport>
+					<alwaysGenerateFailsafeReport>false</alwaysGenerateFailsafeReport>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.14.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<disableXmlReport>true</disableXmlReport>
+					<useFile>false</useFile>
+					<testNGArtifactName>none:none</testNGArtifactName>
+					<includes>
+						<include>**/RunShowroomFeature.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
+		<!--END:plugins -->
+	</build>
 
 
 </project>
